# as312223FoCPSem1

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  doxygen.md
.github/workflows/: doxygen-gh-pages.yml
lab-01/: main.cpp
lab-02/: 1.cpp  2.cpp  3.cpp  4.cpp  5.cpp  6.cpp  7.cpp  main.cpp
lab-03/: 1.cpp  2.cpp  3.cpp  4.cpp
lab-04/: 1.cpp  2.cpp  3.cpp
lab-05/: 1.cpp  10.cpp  11.cpp  2.cpp  3.cpp  4.cpp  5.cpp  6.cpp  7.cpp  8.cpp  9.cpp  palindrome.cpp
lab-06/: 1.cpp  4.cpp
lab-06/1/: 2.cpp  4.cpp
lab-06/2/: 1.cpp
lab-07/: 1.cpp
lab-08/: 1.cpp  Good-citizenship-Grover-Clevelan-[ebooksread.com].txt
lab-09/: 1.cpp  2.cpp  3.cpp  5.cpp  6.cpp  7.cpp
lab-09/extra/: list.cpp
lab-10/: CMakeLists.txt
lab-10/project_ex/: functions.cpp  functions.h  main.cpp
lab-11/: 1.cpp
project/: CMakeLists.txt  Doxyfile  README.md  cli.h  doxygen.md  lz77.cpp  lz77.h  utilities.h
project/inc/: cli.h  lz77.h  tCollectionUtilities.h  tMathUtilities.h  tStringUtilities.h
project/src/: cli.cpp  lz77.cpp  main.cpp  tCollectionUtilities.cpp  tMathUtilities.cpp  tStringUtilities.cpp
project/test/: CMakeLists.txt
project/test/res/: project_test1.raw  project_test2.raw.txt
project/test/result/: project_test1.decompressed.txt  project_test1.txt.compressed  project_test2.decompressed.txt  project_test2.txt.compressed
testingAssets/project/: project_test1.compressed  project_test1.decompressed
